# study-companion

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_telegram_id_bigint.py  0003_study_contexts.py
docs/screenshots/: README.md
evals/: questions.jsonl
evals/fixtures/: english_unit_vocab.txt  inflation_causes_uk.txt  physics_motion_en.txt  product_requirements_en.txt  psychological_knowledge_uk.txt  receipt_groceries_en.txt
scripts/: run_eval.py
src/companion/: config.py
src/companion/analytics/: stats.py
src/companion/api/: main.py
src/companion/bot/: __init__.py  keyboards.py  main.py  middleware.py
src/companion/bot/handlers/: __init__.py  audio.py  context.py  export.py  quiz.py  start.py  stats.py  study.py  upload.py
src/companion/db/: __init__.py  crud.py  models.py  session.py
src/companion/llm/: __init__.py  openrouter.py  providers.py  socratic.py
src/companion/quiz/: __init__.py  generator.py  schemas.py  spaced.py
src/companion/rag/: __init__.py  chain.py  loader.py  vectorstore.py
tests/: test_api.py  test_eval_dataset.py  test_export.py  test_quiz_generator.py  test_rag.py  test_socratic.py  test_spaced_repetition.py
